--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -8,3 +8,10 @@
     font-weight: bold;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'TypoRoundLight';
+    src: local('TypoRoundLight'), url('/src/fonts/TypoRoundLightDemo-wAg3.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
