--- a/src/customBootstrap.css
+++ b/src/customBootstrap.css
@@ -1932,7 +1932,7 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #cfe2ff;
+  --bs-table-bg: var(--bs-primary);
   --bs-table-border-color: #a6b5cc;
   --bs-table-striped-bg: #c5d7f2;
   --bs-table-striped-color: #000;
