--- a/src/customBootstrap.css
+++ b/src/customBootstrap.css
@@ -30,7 +30,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #663dff;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #cc4499;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
